--- a/samples/build-docker-hub/docker-secret.yaml
+++ b/samples/build-docker-hub/docker-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: basic-user-pass
+  name: basic-user-pass-1
   annotations:
     build.knative.dev/docker-0: https://index.docker.io/v1/
 type: kubernetes.io/basic-auth
