--- a/samples/build-docker-hub/service-account.yaml
+++ b/samples/build-docker-hub/service-account.yaml
@@ -1,6 +1,6 @@
  apiVersion: v1
  kind: ServiceAccount
  metadata:
-   name: build-bot
+   name: build-bot-1
  secrets:
- - name: basic-user-pass
+ - name: basic-user-pass-1
